test/runtime/fail/expr/negation_invalid_operand.hy

// expect error: Invalid operand to unary operator `-`

let a = -"hello"
